Use address for zeroconf printers instead of service_name.

The address field in ServiceDescription contains the *.local hostname
used to route requests to the printer.

Bug: 757595
Change-Id: Ib361fbb9fb8b545fc52320c452aa0bc74908805e
Reviewed-on: https://chromium-review.googlesource.com/624940
Commit-Queue: Sean Kau <skau@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496418}
Former-commit-id: fb9560052a9606bedad51935f042f80102399362